--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: "Jekyll theme for blogging."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 paginate: 12
-baseurl: 'staticwebexpert.github.io'
+baseurl: 'https://staticwebexpert.github.io'
 email: 'wowthemesnet@gmail.com'
 google_analytics: 'UA-46278016-1'
 disqus: 'demowebsite'
