--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site
-name: Affiliates Theme for Jekyll
-description: Jekyll Theme for Blogging
-meta_description: "Jekyll theme for blogging."
+name: StaticWebExperts
+description: StaticWebExperts Blog
+meta_description: "Learn how to build a website with a Free Domain and Free Hosting in 10 minutes."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 paginate: 12
 baseurl: 'https://staticwebexpert.github.io'
-email: 'wowthemesnet@gmail.com'
+email: 'staticwebexpert@gmail.com'
 google_analytics: 'UA-46278016-1'
 disqus: 'demowebsite'
 sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a6b2fe4fb197a0011c589f6&product=sticky-share-buttons"></script>'
@@ -14,12 +14,12 @@ sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/
 # Authors
 authors:
   sal:
-    name: Sal
-    display_name: Sal
+    name: Fraser
+    display_name: Fraser
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
+    email: staticwebexpert@gmail.com
+    web: https://modernwebbuilders.github.io
+    twitter: https://twitter.com/modernwebbuild1
     description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
   john:
     name: John
