--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ authors:
     email: staticwebexpert@gmail.com
     web: https://modernwebbuilders.github.io
     twitter: https://twitter.com/modernwebbuild1
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    description: "Author for StaticWebExperts and ModernWebBuilders"
   john:
     name: John
     display_name: John
