--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ authors:
     web: https://modernwebbuilders.github.io
     twitter: https://twitter.com/modernwebbuild1
     description: "Author for StaticWebExperts and ModernWebBuilders"
-  john:
-    name: John
-    display_name: John
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
+  #john:
+   # name: John
+    #display_name: John
+    #gravatar: b1cc14991db7a456fcd761680bbc8f81
+   # email: wowthemesnet@gmail.com
+    #web: https://www.wowthemes.net/category/jekyll-themes/
+   # twitter: https://twitter.com/wowthemesnet
+    #description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
 
 # Plugins
 plugins: 
